# 8disco

./: 6-0.md  AGENTS.md  LICENSE  README.md  impl1.md  phase5-5.md  pyproject.toml  tradsl-abstractions.md
data/parquet/: AAPL.parquet  AAPL_intraday.parquet  AMZN.parquet  GOOG.parquet  GOOG_intraday.parquet  MSFT.parquet  TSLA.parquet  multi.parquet
demo/: google_example.py
docs/: ml-architecture.md
examples/: mean_reversion_spy.tradsl  run_mean_reversion.py
tests/: conftest.py  parquet_generator.py  test_agent_framework.py  test_api.py  test_backtest.py  test_circular_buffer.py  test_clickhouse_functions.py  test_config_block.py  test_dag.py  test_dag_construction.py  test_end_to_end.py  test_functions.py  test_integration.py  test_join_tables.py  test_labels.py  test_ml.py  test_models_impl.py  test_parser.py  test_pipeline.py  test_reproducibility.py  test_rewards.py  test_schema.py  test_sizers.py  test_sparse.py  test_statistics.py  test_training.py  test_yf_adapter.py
tradsl/: __init__.py  adapters.py  agent_framework.py  backtest.py  bootstrap.py  circular_buffer.py  dag.py  exceptions.py  execution.py  functions.py  labels.py  mlfunctions.py  models.py  models_impl.py  nt_integration.py  parser.py  portfolio_adapter.py  portfolio_function.py  portfolio_state.py  pricetransforms.py  python.py  resolver.py  rewards.py  schema.py  signals.py  sizers.py  sizing.py  sparse.py  statistics.py  test_backtest.py  test_dag.py  test_e2e.py  test_edge_cases.py  test_models.py  test_nautilus.py  test_parser.py  test_resolver.py  testdata_adapter.py  training.py  yf_adapter.py
tradsl/adapters/: __init__.py  base.py  csv_adapter.py  fred.py  test_adapters.py  yfinance.py
tradsl/backtest/: __init__.py  engine.py  execution.py  nautilus_adapter.py  nautilus_backend.py  nautilus_strategy.py
tradsl/ml/: __init__.py  agents.py  classifiers.py  regressors.py
tradsl/portfolio/: __init__.py  tracker.py
tradsl/storage/: __init__.py  connection.py
tradsl/utils/: __init__.py  data_loader.py  feature_engine.py  interpreter.py  test_comprehensive.py  test_data_loader.py  test_feature_engine.py  test_feature_engine_edge.py  test_interpreter.py  test_training.py  training.py
