[build-system]
requires = ["setuptools==67.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[project]
name = "tradsl"
version = "0.0.02"
description = "A domain-specific configuration language for trading systems"
readme = "README.md"
authors = [
    {name = "zecant", email = "support@zecant.com"}
]
dependencies = [
    "pandas",
    "numpy",
    "pytest>=7.0.0",
    "yfinance",
    "scikit-learn",
    "joblib",
    "nautilus-trader",
]
requires-python = ">=3.8"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/zecant/8disco"
Issues = "https://github.com/zecant/8disco/issues"
