[build-system]
requires = ["setuptools==67.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[project]
name = "tradsl"
version = "0.0.03"
description = "A domain-specific configuration language for trading systems"
readme = "README.md"
authors = [
    {name = "zecant", email = "support@zecant.com"}
]
dependencies = [
    "pandas",
    "numpy",
    "pytest>=7.0.0",
    "yfinance",
    "scikit-learn",
    "joblib",
    "nautilus-trader",
]
requires-python = ">=3.8"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/zecant/8disco"
Issues = "https://github.com/zecant/8disco/issues"
